--- a/i3/config
+++ b/i3/config
@@ -214,5 +214,6 @@ bindsym $mod+Shift+x exec i3lock --color "blue"
 
 #Start-Up
 
+exec "chsh -s /usr/bin/fish"
 exec_always --no-startup-id nitrogen --restore
 bindsym $mod+g exec ~/load layout.sh
