--- a/i3/config
+++ b/i3/config
@@ -215,6 +215,7 @@ bindsym $mod+Shift+x exec i3lock --color "blue"
 #Start-Up
 
 exec "chsh -s /usr/bin/fish"
+exec fcitx5 -d &
 exec "setxkbmap -layout gb"
 exec_always --no-startup-id nitrogen --restore
 bindsym $mod+g exec ~/load layout.sh
