--- a/i3/config
+++ b/i3/config
@@ -214,8 +214,8 @@ bindsym $mod+Shift+x exec i3lock --color "blue"
 
 #Start-Up
 
-exec "chsh -s /usr/bin/fish"
+exec chsh -s /usr/bin/fish
 exec fcitx5 -d &
-exec "setxkbmap -layout gb"
+exec setxkbmap -layout gb
 exec_always --no-startup-id nitrogen --restore
 bindsym $mod+g exec ~/load layout.sh
