--- a/i3/config
+++ b/i3/config
@@ -215,8 +215,7 @@ bindsym $mod+Shift+x exec i3lock --color "blue"
 #Start-Up
 
 exec chsh -s /usr/bin/fish
-exec fcitx5 -d &
-exec picom &
-exec setxkbmap -layout gb
+exec_always fcitx5 -d &
+exec_always picom -b &
 exec_always --no-startup-id nitrogen --restore
 bindsym $mod+g exec ~/load layout.sh
