--- a/i3/config
+++ b/i3/config
@@ -70,7 +70,7 @@ bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
-bindsym $mod+s exec "flameshot"
+bindsym $mod+Shift+s exec "flameshot"
 
 # move focused window
 bindsym $mod+Shift+j move left
