--- a/i3/config
+++ b/i3/config
@@ -70,8 +70,6 @@ bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
-bindsym $mod+Shift+s exec "flameshot"
-
 # move focused window
 bindsym $mod+Shift+j move left
 bindsym $mod+Shift+k move down
@@ -212,7 +210,7 @@ bar {
 	}
 }
 
-bindsym $mod+Shift+x exec i3lock --color "blue"
+bindsym $mod+Shift+x exec flameshot
 
 #Start-Up
 
