--- a/i3/config
+++ b/i3/config
@@ -201,7 +201,7 @@ bar {
 	position top
 	binding_mode_indicator yes
 	colors {
-		background $bg-color
+		background #000000
 	    	separator #757575
 		#                  border             background         text
 		focused_workspace  $bg-color          $bg-color          $text-color
