--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -21,10 +21,9 @@ print_info() {
     info "CPU" cpu
     info "GPU" gpu
     info "Memory" memory
-
     # info "GPU Driver" gpu_driver  # Linux/macOS only
-    # info "CPU Usage" cpu_usage
-    # info "Disk" disk
+    info "CPU Usage" cpu_usage
+    info "Disk" disk
     # info "Battery" battery
     # info "Font" font
     # info "Song" song
