--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -410,7 +410,7 @@ disk_show=('/')
 # none:   'Disk: 74G / 118G (66%)'
 #         'Disk: 74G / 118G (66%)'
 #         'Disk: 74G / 118G (66%)'
-disk_subtitle="mount"
+disk_subtitle="dir"
 
 # Disk percent.
 # Show/Hide disk percent.
