--- a/reflector.conf
+++ b/reflector.conf
@@ -15,13 +15,13 @@
 # Select the transfer protocol (--protocol).
 --protocol https
 
-# Select the country (--country).
-# Consult the list of available countries with "reflector --list-countries" and
-# select the countries nearest to you or the ones that you trust. For example:
-# --country France,Germany
-
 # Use only the  most recently synchronized mirrors (--latest).
 --latest 5
 
 # Sort the mirrors by synchronization time (--sort).
 --sort age
+
+# Select the country (--country).
+# Consult the list of available countries with "reflector --list-countries" and
+# select the countries nearest to you or the ones that you trust. For example:
+--country 
