--- a/i3/config
+++ b/i3/config
@@ -82,11 +82,8 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
-# split in horizontal orientation
-bindsym $mod+h split h
-
-# split in vertical orientation
-bindsym $mod+v split v
+bindsym $mod+v exec vesktop
+bindsym $mod+m exec mercury-browser
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
