--- a/i3/config
+++ b/i3/config
@@ -84,12 +84,12 @@ bindsym $mod+Shift+Right move right
 
 bindsym $mod+v exec vesktop
 bindsym $mod+m exec mercury-browser
+bindsym $mod+s exec steam
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
 bindsym $mod+e layout toggle split
 
