--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -23,14 +23,14 @@ hide_when_typing = true
 draw_bold_text_with_bright_colors = true
 
 [colors.bright]
-black = "#949494"
-blue = "#74b2ff"
-cyan = "#85dc85"
-green = "#36c692"
-magenta = "#ae81ff"
-red = "#ff5189"
-white = "#e4e4e4"
-yellow = "#c2c292"
+black = "#080808"
+blue = "#80a0ff"
+cyan = "#79dac8"
+green = "#8cc85f"
+magenta = "#cf87e8"
+red = "#ff5454"
+white = "#c6c6c6"
+yellow = "#e3c78a"
 
 [colors.cursor]
 cursor = "#8e8e8e"
