--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -25,7 +25,7 @@ draw_bold_text_with_bright_colors = true
 [colors.bright]
 black = "#080808"
 blue = "#ffb7c5"
-cyan = "#79dac8"
+cyan = "#ffb7c5"
 green = "#8cc85f"
 magenta = "#cf87e8"
 red = "#ff5454"
@@ -39,7 +39,7 @@ text = "#080808"
 [colors.normal]
 black = "#080808"
 blue = "#ffb7c5"
-cyan = "#79dac8"
+cyan = "#ffb7c5"
 green = "#8cc85f"
 magenta = "#cf87e8"
 red = "#ff5454"
