--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -29,7 +29,7 @@ blue = "#74b2ff"
 cyan = "#85dc85"
 green = "#8cc85f"
 magenta = "#cf87e8"
-red = "#ff5454"
+red = "#990F02"
 white = "#c6c6c6"
 yellow = "#e3c78a"
 
@@ -44,7 +44,7 @@ blue = "#74b2ff"
 cyan = "#85dc85"
 green = "#8cc85f"
 magenta = "#cf87e8"
-red = "#ff5454"
+red = "#990F02"
 white = "#c6c6c6"
 yellow = "#e3c78a"
 
