--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -4,26 +4,26 @@ print_info() {
     info title
     info underline
 
-    info "OS" distro
-    info "Host" model
-    info "Kernel" kernel
-    info "Uptime" uptime
-    info "Packages" packages
-    info "Shell" shell
-    info "Resolution" resolution
-    info "DE" de
-    info "WM" wm
-    info "WM Theme" wm_theme
-    info "Theme" theme
-    info "Icons" icons
-    info "Terminal" term
-    info "Terminal Font" term_font
-    info "CPU" cpu
-    info "GPU" gpu
-    info "Memory" memory
-    # info "GPU Driver" gpu_driver  # Linux/macOS only
-    info "CPU Usage" cpu_usage
-    info "Disk" disk
+    info "$(color 1)OS" distro
+    info "$(color 1)Host" model
+    info "$(color 1)Kernel" kernel
+    info "$(color 1)Uptime" uptime
+    info "$(color 1)Packages" packages
+    info "$(color 1)Shell" shell
+    info "$(color 1)Resolution" resolution
+    # info "$(color 1)DE" de
+    info "$(color 1)WM" wm
+    # info "$(color 1)WM Theme" wm_theme
+    info "$(color 1)Theme" theme
+    # info "$(color 1)Icons" icons
+    info "$(color 1)Terminal" term
+    # info "$(color 1)Terminal Font" term_font
+    info "$(color 1)CPU" cpu
+    info "$(color 1)GPU" gpu
+    info "$(color 1)Memory" memory
+    info "$(color 1)GPU Driver" gpu_driver  # Linux/macOS only
+    info "$(color 1)CPU Usage" cpu_usage
+    info "$(color 1)Disk" disk
     # info "Battery" battery
     # info "Font" font
     # info "Song" song
