--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -25,7 +25,7 @@ draw_bold_text_with_bright_colors = true
 [colors.bright]
 black = "#080808"
 blue = "#74b2ff"
-cyan = "#85dc85"
+cyan = "#00FFFF"
 green = "#8cc85f"
 magenta = "#cf87e8"
 red = "#990F02"
@@ -39,7 +39,7 @@ text = "#080808"
 [colors.normal]
 black = "#080808"
 blue = "#74b2ff"
-cyan = "#85dc85"
+cyan = "#00FFFF"
 green = "#8cc85f"
 magenta = "#cf87e8"
 red = "#990F02"
