--- a/i3/config
+++ b/i3/config
@@ -200,7 +200,7 @@ bar {
 	position top
 	binding_mode_indicator yes
 	colors {
-		background #000000
+		background #cf87e8
 	    	separator #757575
 		#                  border             background         text
 		focused_workspace  $bg-color          $bg-color          $text-color
