--- a/i3/config
+++ b/i3/config
@@ -88,6 +88,7 @@ bindsym $mod+s exec steam
 bindsym $mod+o exec obsidian
 bindsym $mod+x exec flameshot gui
 bindsym $mod+Shift+x exec i3lock
+bindsym $mod+c exec code .
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
