--- a/i3/config
+++ b/i3/config
@@ -83,7 +83,7 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 bindsym $mod+v exec vesktop
-bindsym $mod+m exec mercury-browser
+bindsym $mod+b exec firefox
 bindsym $mod+s exec steam
 bindsym $mod+o exec obsidian
 bindsym $mod+x exec flameshot gui
