--- a/i3/config
+++ b/i3/config
@@ -205,7 +205,7 @@ bar {
 	position top
 	binding_mode_indicator yes
 	colors {
-		background #cf87e8
+		background #cf61a1
 	    	separator #757575
 		#                  border             background         text
 		focused_workspace  $bg-color          $bg-color          $text-color
