--- a/i3/config
+++ b/i3/config
@@ -183,8 +183,8 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-set $bg-color 	         #cf87e8
-set $inactive-bg-color   #cf61a1
+set $bg-color 	         #cf61a1
+set $inactive-bg-color   #cf87e8
 set $text-color          #91e2ff
 set $inactive-text-color #74b2ff
 set $urgent-bg-color     #080808
@@ -205,7 +205,7 @@ bar {
 	position top
 	binding_mode_indicator yes
 	colors {
-		background #cf61a1
+		background #cf87e8
 	    	separator #757575
 		#                  border             background         text
 		focused_workspace  $bg-color          $bg-color          $text-color
