--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -120,6 +120,10 @@ interval=1
 #interval=once
 #signal=11
 
+[battery]
+command=acpi -b | awk -F', ' '{print $1, $2}'
+interval=30
+
 #[keyindicator]
 #instance=NUM
 #interval=once
