--- a/qutebrowser/autoconfig.yml
+++ b/qutebrowser/autoconfig.yml
@@ -18,12 +18,23 @@ settings:
     global: '#74c365'
   colors.completion.odd.bg:
     global: '#000000'
+  colors.hints.bg:
+    global: qlineargradient(x0:0, y0:0, x0:0, y0:1, stop:0 rgba(0, 0, 0, 1), stop:1
+      rgba(0, 0, 0, 1))
+  colors.hints.fg:
+    global: '#ffffff'
+  colors.keyhint.bg:
+    global: rgba(255, 255, 255, 20%)
+  colors.prompts.bg:
+    global: '#000000'
   colors.statusbar.url.success.https.fg:
     global: '#74c365'
   colors.webpage.darkmode.enabled:
     global: true
   content.blocking.enabled:
     global: true
+  hints.border:
+    global: '1px solid #ffffff'
   scrolling.bar:
     global: when-searching
   statusbar.show:
