--- a/i3/config
+++ b/i3/config
@@ -10,14 +10,11 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
+exec_always --no-startup-id polybar
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:MartianMono 8
-
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
+font pango:MartianMono 11
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -182,35 +179,9 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-set $bg-color 	         #cf99f9
-set $inactive-bg-color   #cf89f9
-set $text-color          #91e2ff
-set $inactive-text-color #91e2ff
-set $urgent-bg-color     #080808
-
-# window colors
-#                       border              background         text                 indicator
-client.focused          $bg-color           $bg-color          $text-color         #0569AA
-client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color #0569AA
-client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color #0569AA
-client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color         #0569AA
-
-hide_edge_borders both
-
-# bar
-bar {
-  	status_command i3blocks -c ~/.config/i3/i3blocks.conf
-	workspace_buttons yes
-	position top
-	binding_mode_indicator yes
-	colors {
-		background #cf89f9
-	    	separator #757575
-		#                  border             background         text
-		focused_workspace  $bg-color          $bg-color          $text-color
-		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
-		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
-	}
-}
-
-#Start-Up
+#Startup
+exec --no-startup-id nitrogen --restore
+exec --no-startup-id dunst &
+exec --no-startup-id picom -b &
+exec --no-startup-id fcitx5 -d &
+exec --no-startup-id flameshot &
