--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -58,14 +58,14 @@ disabled = ${colors.subtext1}
 monitor = ${env:MONITOR:}
 width = 100%
 height = 28pt
-radius = 0
+radius = 20
 
 ; dpi = 96
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-bottom = true
+bottom = false
 
 line-size = 6pt
 
