--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -1,3 +1,21 @@
+;==========================================================
+;
+;
+;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
+;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
+;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
+;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
+;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
+;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
+;
+;
+;   To learn more about how to configure Polybar
+;   go to https://github.com/polybar/polybar
+;
+;   The README contains a lot of information
+;
+;==========================================================
+
 [colors]
 base = #1e1e2e
 mantle = #181825
@@ -26,26 +44,6 @@ pink = #f5c2e7
 flamingo = #f2cdcd
 rosewater = #f5e0dc
 transparent = #FF00000
-
-;==========================================================
-;
-;
-;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
-;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
-;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
-;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
-;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
-;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
-;
-;
-;   To learn more about how to configure Polybar
-;   go to https://github.com/polybar/polybar
-;
-;   The README contains a lot of information
-;
-;==========================================================
-
-[colors]
 background = ${colors.base}
 background-alt = ${colors.blue}
 foreground = ${colors.text}
@@ -56,24 +54,22 @@ disabled = ${colors.subtext1}
 
 [bar/toph]
 monitor = ${env:MONITOR:}
-width = 50%
-height = 28pt
-radius = 10
+width = 100%
+height = 24pt
+radius = 6
 
 ; dpi = 96
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-bottom = false
+line-size = 3pt
 
-line-size = 6pt
-
-#border-size = 4pt
+border-size = 4pt
 border-color = #00000000
 
-padding-left = 10
-padding-right = 10
+padding-left = 0
+padding-right = 1
 
 module-margin = 1
 
@@ -83,7 +79,7 @@ separator-foreground = ${colors.flamingo}
 font-0 = MesloLGS Nerd Font Mono:size=14;6
 
 modules-left = xworkspaces xwindow
-modules-right = pulseaudio battery memory cpu wlan date
+modules-right = filesystem pulseaudio xkeyboard memory cpu wlan date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
