--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -54,8 +54,8 @@ disabled = ${colors.subtext1}
 
 [bar/toph]
 monitor = ${env:MONITOR:}
-width = 100%
-height = 24pt
+width = 50%
+height = 50%
 radius = 6
 
 ; dpi = 96
