--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -55,7 +55,7 @@ disabled = ${colors.subtext1}
 [bar/toph]
 monitor = ${env:MONITOR:}
 width = 100%
-height = 28%
+height = 28pt
 radius = 6
 
 ; dpi = 96
