--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -17,7 +17,7 @@
 ;==========================================================
 
 [colors]
-base = #1e1e2e
+base = #7f1e1e2e
 mantle = #181825
 crust = #11111b
 text = #cdd6f4
