--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -11,7 +11,7 @@
 
 set $mod Mod4
 exec --no-startup-id killall polybar
-exec_always --no-startup-id polybar
+exec_always --no-startup-id ~/.config/polybar/launch_polybar.sh
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
