--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -10,7 +10,7 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
-exec --no-startup-id killall polybar
+exec_always --no-startup-id killall polybar
 exec_always --no-startup-id ~/dotfiles/polybar/launch_polybar.sh
 
 # Font for window titles. Will also be used by the bar unless a different font
