--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -10,8 +10,16 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod4
+
+#Startup
 exec_always --no-startup-id killall polybar
 exec_always --no-startup-id ~/dotfiles/polybar/launch_polybar.sh
+exec_always --no-startup-id feh --bg-scale ~/Pictures/archchan.png
+exec_always --no-startup-id dunst &
+exec_always --no-startup-id picom -b &
+exec_always --no-startup-id fcitx5 -d &
+exec_always --no-startup-id flameshot &
+
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -177,10 +185,3 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
-
-#Startup
-exec --no-startup-id nitrogen --restore
-exec --no-startup-id dunst &
-exec --no-startup-id picom -b &
-exec --no-startup-id fcitx5 -d &
-exec --no-startup-id flameshot &
