--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -79,7 +79,7 @@ separator-foreground = ${colors.flamingo}
 font-0 = MesloLGS Nerd Font Mono:size=14;6
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan date
+modules-right = filesystem pulseaudio fcitx5 memory cpu wlan date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
