--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -126,15 +126,15 @@ label = %title:0:60:...%
 type = internal/fs
 interval = 25
 
-mount-0 = /
+mount-0 = User 
 
 label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
 
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
 
-[module/pulseaudio]
-type = internal/pulseaudio
+[module/pipewire]
+type = internal/pipewire
 
 format-volume-prefix = "VOL "
 format-volume-prefix-foreground = ${colors.primary}
@@ -145,17 +145,12 @@ label-volume = %percentage%%
 label-muted = muted
 label-muted-foreground = ${colors.disabled}
 
-[module/xkeyboard]
-type = internal/xkeyboard
-blacklist-0 = num lock
-
-label-layout = %layout%
-label-layout-foreground = ${colors.primary}
-
-label-indicator-padding = 2
-label-indicator-margin = 1
-label-indicator-foreground = ${colors.background}
-label-indicator-background = ${colors.secondary}
+[module/fcitx]
+type = custom/script
+exec = ~/.config/polybar/polybar-fcitx5-script.sh
+tail = true
+interval = 0
+format-prefix = "KBD"
 
 [module/memory]
 type = internal/memory
