--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -126,7 +126,7 @@ label = %title:0:60:...%
 type = internal/fs
 interval = 25
 
-mount-0 = /home/lazybev
+mount-0 = /
 
 label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
 
