--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -133,8 +133,8 @@ label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
 
-[module/pipewire]
-type = internal/pipewire
+[module/pulseaudio]
+type = internal/pulseaudio
 
 format-volume-prefix = "VOL "
 format-volume-prefix-foreground = ${colors.primary}
