--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -103,6 +103,7 @@ bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+w layout tabbed
+bindsym $mod+g layout stacked
 bindsym $mod+Shift+w layout toggle split
 
 # toggle tiling / floating
