--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -89,7 +89,7 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
-bindsym $mod+v exec discord
+bindsym $mod+v exec flatpak run com.discordapp.Discord
 bindsym $mod+b exec qutebrowser
 bindsym $mod+Shift+b exec firefox
 bindsym $mod+t exec ghostty -e ranger
