--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -15,7 +15,7 @@ set $mod Mod4
 exec --no-startup-id pulseaudio -k
 exec_always --no-startup-id killall polybar
 exec_always --no-startup-id ~/.config/polybar/launch_polybar.sh
-exec_always --no-startup-id feh --bg-scale ~/Pictures/archchan.png
+exec_always --no-startup-id feh --bg-scale ~/Pictures/archchan2.png
 exec_always --no-startup-id dunst &
 exec_always --no-startup-id picom -b &
 exec_always --no-startup-id fcitx5 -d &
