--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -91,7 +91,7 @@ bindsym $mod+Shift+Right move right
 
 bindsym $mod+v exec flatpak run com.discordapp.Discord
 bindsym $mod+b exec qutebrowser
-bindsym $mod+Shift+b exec firefox
+bindsym $mod+Shift+b exec librewolf
 bindsym $mod+t exec ghostty -e ranger
 bindsym $mod+Shift+t exec thunar
 bindsym $mod+s exec steam
